:sparkles: Add new API for solution
